--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centella Scientific | Turning Science into high impact Solutions</title>
+    <meta name="google-site-verification" content="rSVd3jYYde4lffx90PGXm4NKLkDZEyDLpamsPnF00rQ" />
     <meta name="keywords" content="centella, centella scientific, Centella, Centella Scientific, centella.co.in, Centella Scientific communication, centella drug discovery, centella academy, centella medical communication, centella market research, Centella Editing ">
     <meta name="description" content="Centella is a technology platform that provide end-to-end scientific research solutions to the scientific community. It is founded and lead by experienced & practicing research scientists. ">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
