--- a/index.html
+++ b/index.html
@@ -962,8 +962,8 @@
                         <li class=" border-t md:border-none"><a class="m-4 hover:text-blue-500" href="index.html#service">Offerings</a>
                             <ul>
                                 <li class=" border-t md:border-none"><a class="m-4 hover:text-blue-500" href="scientific-communication.html">Scientific Communication</a></li>
-                                <li class=" border-t md:border-none"><a class="m-4 hover:text-blue-500" href="medical-communication.html">Medical Communication</a></li>
-                                <li class=" border-t md:border-none"><a class="m-4 hover:text-blue-600" href="market-research.html">Market Research</a></li>
+                              <!--  <li class=" border-t md:border-none"><a class="m-4 hover:text-blue-500" href="medical-communication.html">Medical Communication</a></li>
+                                <li class=" border-t md:border-none"><a class="m-4 hover:text-blue-600" href="market-research.html">Market Research</a></li> -->
                                 <li class=" border-t md:border-none"><a class="m-4 hover:text-blue-600" href="centella-academy.html">Centella Academy</a></li>
                             </ul>
                         </li>
